--- a/index.html
+++ b/index.html
@@ -4,33 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
+
     <script src="https://kit.fontawesome.com/bbb7b987c0.js"></script>
     <title>BMW</title>
   </head>
   <body>
     <nav class="navigation">
-      <div class="navigation-bar__mobile-menu">
-        <a href="#"> <i class="fas fa-bars"></i></a>
-      </div>
       <div class="navigation-bar">
-        <a class="navigation-bar__text-item" href="#">Home</a>
-        <a class="navigation-bar__text-item" href="#">Automotive Life</a>
-        <a class="navigation-bar__text-item" href="#">Design</a>
-        <a class="navigation-bar__text-item" href="#">Innovation</a>
-        <a class="navigation-bar__text-item" href="#">Performance</a>
-        <a class="navigation-bar__text-item" href="#">Models</a>
-        <div class="navigation-bar__graphic-item">
-          <a href="#"> <i class="fas fa-search"></i></a>
-          <a href="#"> <i class="fas fa-globe-europe"></i></a>
+        <div class="navigation-bar__mobile-menu">
+          <a href="#"> <i class="fas fa-bars"></i></a>
         </div>
-      </div>
-      <div class="navigation-logo">
-        <a href="#">
-          <img
-            src="https://www.bmw.com/etc/designs/bmwcom/base/img/logo-en.png"
-            alt="bmw-logo"
-        /></a>
+        <div class="navigation-bar__items">
+          <a class="navigation-bar__text-item" href="#">Home</a>
+          <a class="navigation-bar__text-item" href="#">Automotive Life</a>
+          <a class="navigation-bar__text-item" href="#">Design</a>
+          <a class="navigation-bar__text-item" href="#">Innovation</a>
+          <a class="navigation-bar__text-item" href="#">Performance</a>
+          <a class="navigation-bar__text-item" href="#">Models</a>
+          <div class="navigation-bar__graphic-item">
+            <a href="#" class="search"> <i class="fas fa-search"></i></a>
+            <a href="#" class="globe">
+              <i class="fas fa-globe-europe"></i>BMW in your country</a
+            >
+          </div>
+        </div>
+        <div class="navigation-bar__logo">
+          <a href="#">
+            <img
+              src="https://www.bmw.com/etc/designs/bmwcom/base/img/logo-en.png"
+              alt="bmw-logo"
+          /></a>
+        </div>
       </div>
     </nav>
     <header class="intro">
