--- a/index.html
+++ b/index.html
@@ -44,16 +44,18 @@
     </nav>
     <header class="intro">
       <a href="#">
-        <h3 class="subline_light">Car sharing Humor</h3>
-        <h2 class="headline_light">
-          A diehard BMW fan gets into a Mercedes...
-        </h2>
-        <p class="btn btn_light">Read more</p>
-        <video autoplay loop>
+        <video class="wide" autoplay loop>
           <source
             src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/survival-guide/sg-00-teaser-hd-1.mp4"
           />
         </video>
+        <div class="text-item">
+          <h3 class="subline_light">Car sharing Humor</h3>
+          <h2 class="headline_light">
+            A diehard BMW fan gets into a <br> Mercedes...
+          </h2>
+          <p class="btn btn_light">Read more</p>
+        </div>
       </a>
     </header>
     <article class="suggestions">
