--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </nav>
     <header class="intro">
       <a href="#">
-        <video class="wide" autoplay loop>
+        <video autoplay loop>
           <source
             src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/survival-guide/sg-00-teaser-hd-1.mp4"
           />
