--- a/index.html
+++ b/index.html
@@ -44,15 +44,18 @@
     </nav>
     <header class="intro">
       <a href="#">
-        <video autoplay loop>
-          <source
-            src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/survival-guide/sg-00-teaser-hd-1.mp4"
-          />
-        </video>
+        <div class="intro-video">
+          <video autoplay loop>
+            <source
+              src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/survival-guide/sg-00-teaser-hd-1.mp4"
+            />
+          </video>
+        </div>
         <div class="text-item">
           <h3 class="subline_light">Car sharing Humor</h3>
           <h2 class="headline_light">
-            A diehard BMW fan gets into a <br> Mercedes...
+            A diehard BMW fan gets into a <br />
+            Mercedes...
           </h2>
           <p class="btn btn_light">Read more</p>
         </div>
@@ -60,30 +63,33 @@
     </header>
     <article class="suggestions">
       <a href="#">
-        <img
-          alt="#"
-          src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/automotive-life/grand-tour/gt-00-teaser-square.jpg.asset.1563871287723.jpg"
-        />
-
-        <div class="suggestions_left">
-          <h3 class="subline_light">Road trip guide</h3>
-          <h2 class="headline_light">
-            Majestic mountains: the Grand Tour of Switzerland
-          </h2>
-          <p class="btn btn_light">Read more</p>
+        <div class="suggestions-image_left">
+          <img
+            alt="#"
+            src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/automotive-life/grand-tour/gt-00-teaser-square.jpg.asset.1563871287723.jpg"
+          />
+          <div class="text-suggestions">
+            <h3 class="subline_light">Road trip guide</h3>
+            <h2 class="headline_light">
+              Majestic mountains: the Grand Tour of Switzerland
+            </h2>
+            <p class="btn btn_light">Read more</p>
+          </div>
         </div>
       </a>
       <a href="#">
-        <img
-          alt="#"
-          src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/automotive-life/e-mobility/em-00-teaser-square.jpg.asset.1562239258598.jpg"
-        />
-        <div class="suggestions_right">
-          <h3 class="subline_dark">E-mobility</h3>
-          <h2 class="headline_dark">
-            6 perfect vehicles for the last mile
-          </h2>
-          <p class="btn btn_dark">Read more</p>
+        <div class="suggestions-image_right">
+          <img
+            alt="#"
+            src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/automotive-life/e-mobility/em-00-teaser-square.jpg.asset.1562239258598.jpg"
+          />
+          <div class="text-suggestions">
+            <h3 class="subline_dark">E-mobility</h3>
+            <h2 class="headline_dark">
+              6 perfect vehicles for the last mile
+            </h2>
+            <p class="btn btn_dark">Read more</p>
+          </div>
         </div>
       </a>
     </article>
