--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
           </video>
         </div>
         <div class="text-item">
-          <h3 class="subline_light">Car sharing Humor</h3>
-          <h2 class="headline_light">
+          <h3 class="subline light">Car sharing Humor</h3>
+          <h2 class="headline light">
             A diehard BMW fan gets into a <br />
             Mercedes...
           </h2>
@@ -69,8 +69,8 @@
             src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/automotive-life/grand-tour/gt-00-teaser-square.jpg.asset.1563871287723.jpg"
           />
           <div class="text-suggestions">
-            <h3 class="subline_light">Road trip guide</h3>
-            <h2 class="headline_light">
+            <h3 class="subline light">Road trip guide</h3>
+            <h2 class="headline light">
               Majestic mountains: the Grand Tour of Switzerland
             </h2>
             <p class="btn btn_light">Read more</p>
@@ -84,9 +84,9 @@
             src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/automotive-life/e-mobility/em-00-teaser-square.jpg.asset.1562239258598.jpg"
           />
           <div class="text-suggestions">
-            <h3 class="subline_dark">E-mobility</h3>
-            <h2 class="headline_dark">
-              6 perfect vehicles for the last mile
+            <h3 class="subline dark">E-mobility</h3>
+            <h2 class="headline dark">
+              6 perfect vehicles for <br> the last mile
             </h2>
             <p class="btn btn_dark">Read more</p>
           </div>
