--- a/index.html
+++ b/index.html
@@ -61,161 +61,188 @@
         </div>
       </a>
     </header>
-    <article class="suggestions">
-      <a href="#">
+    <article class="suggestions-container">
+      <a href="#" class="container_left">
         <div class="suggestions-image_left">
           <img
             alt="#"
             src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/automotive-life/grand-tour/gt-00-teaser-square.jpg.asset.1563871287723.jpg"
           />
-          <div class="text-suggestions">
-            <h3 class="subline light">Road trip guide</h3>
-            <h2 class="headline light">
-              Majestic mountains: the Grand Tour of Switzerland
-            </h2>
-            <p class="btn btn_light">Read more</p>
-          </div>
+        </div>
+        <div class="text-suggestions">
+          <h3 class="subline light">Road trip guide</h3>
+          <h2 class="headline light">
+            Majestic mountains: the Grand Tour of Switzerland
+          </h2>
+          <p class="btn btn_light">Read more</p>
         </div>
       </a>
-      <a href="#">
+      <a href="#" class="container_right">
         <div class="suggestions-image_right">
           <img
             alt="#"
             src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/automotive-life/e-mobility/em-00-teaser-square.jpg.asset.1562239258598.jpg"
           />
-          <div class="text-suggestions">
-            <h3 class="subline dark">E-mobility</h3>
-            <h2 class="headline dark">
-              6 perfect vehicles for <br> the last mile
-            </h2>
-            <p class="btn btn_dark">Read more</p>
-          </div>
+        </div>
+        <div class="text-suggestions">
+          <h3 class="subline dark">E-mobility</h3>
+          <h2 class="headline dark">
+            6 perfect vehicles for <br />
+            the last mile
+          </h2>
+          <p class="btn btn_dark">Read more</p>
         </div>
       </a>
     </article>
     <section class="stories">
-      <h2 class="uppercase">DISCOVER BMW.COM STORIES</h2>
+      <div class="uppercase">
+        <h2>DISCOVER BMW.COM STORIES</h2>
+      </div>
       <div class="stories-wrapper">
-        <a href="#">
-          <div class="stories-item">
+        <a href="#" class="stories-item">
+          <div class="stories-item_image">
             <img
               src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/Innovation/vision-boost/amp/ng-01-media-portrait.jpg.asset.1561713164511.jpg"
               alt=""
             />
+          </div>
+          <div class="stories-item_text">
             <p class="stories-item_subline">#NEXTGen</p>
             <h4 class="stories-item_headline">THE MOBILITY OF TOMORROW</h4>
           </div>
         </a>
-        <a href="#">
-          <div class="stories-item">
+        <a href="#" class="stories-item">
+          <div class="stories-item_image">
             <img
               src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/automotive-life/raod-trip-es/amp/rts-01-media-portrait-amp.jpg.asset.1559732101870.jpg"
               alt=""
             />
+          </div>
+          <div class="stories-item_text">
             <p class="stories-item_subline">Spain Road Trip</p>
             <h4 class="stories-item_headline">THE 7 MOST SCENIC ROUTES</h4>
           </div>
         </a>
-        <a href="#">
-          <div class="stories-item">
+        <a href="#" class="stories-item">
+          <div class="stories-item_image">
             <img
               src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/stories/automotive-life/cabrio-roads/thumb-03-cabrio-roads.png.asset.1552310971999.png"
               alt=""
             />
+          </div>
+          <div class="stories-item_text">
             <p class="stories-item_subline">Travel</p>
             <h4 class="stories-item_headline">
               THE BEST CONVERTIBLE CAR ROAD TRIPS
             </h4>
           </div>
         </a>
-        <a href="#">
-          <div class="stories-item">
+        <a href="#" class="stories-item">
+          <div class="stories-item_image">
             <img
               src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/Design/car-design/AMP/x5-10-media-portrait-amp.jpg.asset.1554804086213.jpg"
               alt=""
             />
+          </div>
+          <div class="stories-item_text">
             <p class="stories-item_subline">Design</p>
             <h4 class="stories-item_headline">CAR DESIGN IN 7 STEPS</h4>
           </div>
         </a>
-        <a href="#">
-          <div class="stories-item">
+        <a href="#" class="stories-item">
+          <div class="stories-item_image">
             <img
               src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/stories/automotive-life/autonomous-driving/thumb-02-autonomes-fahren.png.asset.1552310964826.png"
               alt=""
             />
+          </div>
+          <div class="stories-item_text">
             <p class="stories-item_subline">Mobility of the Future</p>
             <h4 class="stories-item_headline">
               THE 5 STEPS TO AUTONOMOUS DRIVING
             </h4>
           </div>
         </a>
-        <a href="#">
-          <div class="stories-item">
+        <a href="#" class="stories-item">
+          <div class="stories-item_image">
             <img
               src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/Design/my_favorite_space/amp/mfs-nsc-cinema-amp.jpeg.asset.1554807259310.jpeg"
               alt=""
             />
+          </div>
+          <div class="stories-item_text">
             <p class="stories-item_subline">Design</p>
             <h4 class="stories-item_headline">MYSTERY DECRYPTED</h4>
           </div>
         </a>
-        <a href="#">
-          <div class="stories-item">
+        <a href="#" class="stories-item">
+          <div class="stories-item_image">
             <img
               src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/Innovation/bowers-wilkins/amp/bw-amp-10.jpg.asset.1554809091740.jpg"
               alt=""
             />
+          </div>
+          <div class="stories-item_text">
             <p class="stories-item_subline">Innovation</p>
             <h4 class="stories-item_headline">CAR SPEAKERS TEST</h4>
           </div>
         </a>
-        <a href="#">
-          <div class="stories-item">
+        <a href="#" class="stories-item">
+          <div class="stories-item_image">
             <img
               src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/stories/automotive-life/driving-with-dogs/thumb-04-fahren-hunde.png.asset.1552310976296.png"
               alt=""
             />
+          </div>
+          <div class="stories-item_text">
             <p class="stories-item_subline">Advice</p>
             <h4 class="stories-item_headline">DRIVING WITH DOGS</h4>
           </div>
         </a>
-        <a href="#">
-          <div class="stories-item">
+        <a href="#" class="stories-item">
+          <div class="stories-item_image">
             <img
               src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/stories/automotive-life/bhutan/thumb-01-bhutan.png.asset.1551785344228.png"
               alt=""
             />
+          </div>
+          <div class="stories-item_text">
             <p class="stories-item_subline">Travel</p>
             <h4 class="stories-item_headline">ROAD TRIP TO HAPPINESS</h4>
           </div>
         </a>
-        <a href="#">
-          <div class="stories-item">
+        <a href="#" class="stories-item">
+          <div class="stories-item_image">
             <img
               src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/stories/automotive-life/carsharing/bmw-carsharing-amp-thumb.jpg.asset.1554109638090.jpg"
               alt=""
             />
+          </div>
+          <div class="stories-item_text">
             <p class="stories-item_subline">Lifehack</p>
             <h4 class="stories-item_headline">9 CARSHARING TIPS</h4>
           </div>
         </a>
-        <a href="#">
-          <div class="stories-item">
+        <a href="#" class="stories-item">
+          <div class="stories-item_image">
             <img
               src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/automotive-life/lack/AMP/lack-09-media-portrait-amp.jpg.asset.1556006494145.jpg"
               alt=""
             />
+          </div>
+          <div class="stories-item_text">
             <p class="stories-item_subline">Automotive Life</p>
             <h4 class="stories-item_headline">PAINT LOVE</h4>
           </div>
         </a>
-        <a href="#">
-          <div class="stories-item">
+        <a href="#" class="stories-item">
+          <div class="stories-item_image">
             <img
               src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/automotive-life/need-for-speed/AMP/nfs-07-media-portrait-amp.jpg.asset.1554807507877.jpg"
               alt=""
             />
+          </div>
+          <div class="stories-item_text">
             <p class="stories-item_subline">Performance</p>
             <h4 class="stories-item_headline">ACTION MOVIE YOU CAN PLAY</h4>
           </div>
