--- a/index.html
+++ b/index.html
@@ -250,9 +250,11 @@
       </div>
     </section>
     <section class="find-bmw">
-      <p>BMW in your country</p>
-      <h2>ALL BMW MODELS</h2>
-      <a href="#">Find your BMW</a>
+      <div class="find-bmw_text">
+        <p>BMW in your country</p>
+        <h2>ALL BMW MODELS</h2>
+        <a href="#">Find your BMW</a>
+      </div>
     </section>
     <section class="xplainer">
       <a href="#" class="xplainer_large">
