--- a/index.html
+++ b/index.html
@@ -257,133 +257,179 @@
       </div>
     </section>
     <section class="xplainer">
-      <a href="#" class="xplainer_large">
-        <img
-          src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/Innovation/vision-boost/vb-00-teaser-square.jpg.asset.1561449292402.jpg"
-          alt=""
-        />
-        <h3 class="subline_light">Vision Vehicle</h3>
-        <h2 class="headline_light">
-          How to experience a BMW Vision M NEXT
-        </h2>
-      </a>
-      <a class="xplainer_small" href="#">
-        <video autoplay loop>
-          <source
-            src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/glamping-and-luxury-camping/glamping-00-teaser-hd.mp4"
+      <a href="#" class="xplainer">
+        <div class="xplainer-image">
+          <img
+            src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/Innovation/vision-boost/vb-00-teaser-square.jpg.asset.1561449292402.jpg"
+            alt=""
           />
-        </video>
-        <h3 class="subline_dark">Lifestyle</h3>
-        <h2 class="headline_dark">
-          Glamping - discover the 5 top spots
-        </h2>
+        </div>
+        <div class="xplainer-text">
+          <h3 class="subline_light">Vision Vehicle</h3>
+          <h2 class="headline_light">
+            How to experience a BMW Vision M NEXT
+          </h2>
+        </div>
       </a>
-      <a href="#" class="xplainer_small">
-        <video autoplay loop>
-          <source
-            src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/canyoning-beginners-guide/bmw-x1-canyoning-00-teaser-hd.mp4"
+      <a class="xplainer" href="#">
+        <div class="xplainer-video">
+          <video autoplay loop>
+            <source
+              src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/glamping-and-luxury-camping/glamping-00-teaser-hd.mp4"
+            />
+          </video>
+        </div>
+        <div class="xplainer-text">
+          <h3 class="subline_dark">Lifestyle</h3>
+          <h2 class="headline_dark">
+            Glamping - discover the 5 top spots
+          </h2>
+        </div>
+      </a>
+      <a href="#" class="xplainer">
+        <div class="xplainer-video">
+          <video autoplay loop>
+            <source
+              src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/canyoning-beginners-guide/bmw-x1-canyoning-00-teaser-hd.mp4"
+            />
+          </video>
+        </div>
+        <div class="xplainer-text">
+          <h3 class="subline_light">Trending sport</h3>
+          <h2 class="headline_light">
+            The must-haves for canyoneering
+          </h2>
+        </div>
+      </a>
+      <a href="#" class="xplainer">
+        <div class="xplainer-video">
+          <video autoplay loop>
+            <source
+              src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/bmw-explained-logo/exl-00-teaser-hd.mp4"
+            />
+          </video>
+        </div>
+        <div class="xplainer-text">
+          <h3 class="subline_light">BMW explained</h3>
+          <h2 class="headline_light">
+            Not really a propeller: the true story of the BMW logo
+          </h2>
+        </div>
+      </a>
+      <a href="#" class="xplainer">
+        <div class="xplainer-video">
+          <video autoplay loop>
+            <source
+              src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/innovation/explained/ee-00-teaser-hd.mp4"
+            />
+          </video>
+        </div>
+        <div class="xplainer-text">
+          <h3 class="subline_light">Guide</h3>
+          <h2 class="headline_light">
+            The types of electric cars you need to know
+          </h2>
+        </div>
+      </a>
+      <a href="#" class="xplainer">
+        <div class="xplainer-image">
+          <img
+            src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/Innovation/value-of-time/vot-00-teaser-hd.jpg.asset.1560242085200.jpg"
+            alt=""
           />
-        </video>
-        <h3 class="subline_light">Trending sport</h3>
-        <h2 class="headline_light">
-          The must-haves for canyoneering
-        </h2>
+        </div>
+        <div class="xplainer-text">
+          <h3 class="subline_light">Time is money</h3>
+          <h2 class="headline_light">
+            How self-driving cars improve your time management
+          </h2>
+        </div>
       </a>
-      <a href="#" class="xplainer_small">
-        <video autoplay loop>
-          <source
-            src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/bmw-explained-logo/exl-00-teaser-hd.mp4"
-          />
-        </video>
-        <h3 class="subline_light">BMW explained</h3>
-        <h2 class="headline_light">
-          Not really a propeller: the true story of the BMW logo
-        </h2>
-      </a>
-      <a href="#" class="xplainer_small">
-        <video autoplay loop>
-          <source
-            src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/innovation/explained/ee-00-teaser-hd.mp4"
-          />
-        </video>
-        <h3 class="subline_light">Guide</h3>
-        <h2 class="headline_light">
-          The types of electric cars you need to know
-        </h2>
-      </a>
-      <a href="#" class="xplainer_small">
-        <img
-          src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/Innovation/value-of-time/vot-00-teaser-hd.jpg.asset.1560242085200.jpg"
-          alt=""
-        />
-        <h3 class="subline_light">Time is money</h3>
-        <h2 class="headline_light">
-          How self-driving cars improve your time management
-        </h2>
-      </a>
-      <a href="#" class="xplainer_small">
-        <div>
+      <a href="#" class="xplainer">
+        <div class="xplainer-image">
           <img
             src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/automotive-life/Zetsche/rdz-00-teaser-hd1.jpg.asset.1560259401102.jpg"
             alt=""
           />
+        </div>
+        <div class="xplainer-text">
           <h3 class="subline_light">For car aficionados</h3>
           <h2 class="headline_light">
             The ultimate bucket list for car enthusiasts
           </h2>
         </div>
       </a>
-      <a href="#" class="xplainer_large">
-        <video autoplay loop>
-          <source
-            src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/innovation/copilot-2/copilot-00-teaser-hd.mp4"
+      <a href="#" class="xplainer">
+        <div class="xplainer-video">
+          <video autoplay loop>
+            <source
+              src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/innovation/copilot-2/copilot-00-teaser-hd.mp4"
+            />
+          </video>
+        </div>
+        <div class="xplainer-text">
+          <h3 class="subline_light">Self-driving cars</h3>
+          <h2 class="headline_light">
+            The Road to Autonomous Driving
+          </h2>
+        </div>
+      </a>
+      <a href="#" class="xplainer">
+        <div class="xplainer-image">
+          <img
+            src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/Innovation/yournow/yn-00-teaser-hd1.jpg.asset.1556007571509.jpg"
+            alt=""
           />
-        </video>
-        <h3 class="subline_light">Self-driving cars</h3>
-        <h2 class="headline_light">
-          The Road to Autonomous Driving
-        </h2>
+        </div>
+        <div class="xplainer-text">
+          <h3 class="subline_light">Guide to terms</h3>
+          <h2 class="headline_light">
+            The ins and outs of new mobility
+          </h2>
+        </div>
       </a>
-      <a href="#" class="xplainer_small">
-        <img
-          src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/Innovation/yournow/yn-00-teaser-hd1.jpg.asset.1556007571509.jpg"
-          alt=""
-        />
-        <h3 class="subline_light">Guide to terms</h3>
-        <h2 class="headline_light">
-          The ins and outs of new mobility
-        </h2>
-      </a>
-      <a href="#" class="xplainer_small">
-        <img
-          src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/Design/my_favorite_space/mfs-00-teaser-hd.jpg.asset.1537430075672.jpg"
-          alt=""
-        />
-        <h3 class="subline_light">Design</h3>
-        <h2 class="headline_light">
-          The secret of our favorite places
-        </h2>
-      </a>
-      <a href="#" class="xplainer_small">
-        <img
-          src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/automotive-life/isetta-history/is-00-teaser-hd.jpg.asset.1559637615084.jpg"
-          alt=""
-        />
-        <h3 class="subline_light">Classic car</h3>
-        <h2 class="headline_light">
-          A big history for the small Isetta
-        </h2>
-      </a>
-      <a href="#" class="xplainer_small">
-        <video autoplay loop>
-          <source
-            src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/f40/f40-00-teaser-hd.mp4"
+      <a href="#" class="xplainer">
+        <div class="xplainer-image">
+          <img
+            src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/Design/my_favorite_space/mfs-00-teaser-hd.jpg.asset.1537430075672.jpg"
+            alt=""
           />
-        </video>
-        <h3 class="subline_light">Playlists</h3>
-        <h2 class="headline_light">
-          From night ride to road trip: the 70 best driving songs
-        </h2>
+        </div>
+        <div class="xplainer-text">
+          <h3 class="subline_light">Design</h3>
+          <h2 class="headline_light">
+            The secret of our favorite places
+          </h2>
+        </div>
+      </a>
+      <a href="#" class="xplainer">
+        <div class="xplainer-image">
+          <img
+            src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/automotive-life/isetta-history/is-00-teaser-hd.jpg.asset.1559637615084.jpg"
+            alt=""
+          />
+        </div>
+        <div class="xplainer-text">
+          <h3 class="subline_light">Classic car</h3>
+          <h2 class="headline_light">
+            A big history for the small Isetta
+          </h2>
+        </div>
+      </a>
+      <a href="#" class="xplainer">
+        <div class="xplainer-video">
+          <video autoplay loop>
+            <source
+              src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/f40/f40-00-teaser-hd.mp4"
+            />
+          </video>
+        </div>
+        <div class="xplainer-text">
+          <h3 class="subline_light">Playlists</h3>
+          <h2 class="headline_light">
+            From night ride to road trip: the 70 best driving songs
+          </h2>
+        </div>
       </a>
       <a href="#">
         <p class="btn btn_dark_wide">Show more</p>
