--- a/index.html
+++ b/index.html
@@ -256,14 +256,13 @@
         <a href="#">Find your BMW</a>
       </div>
     </section>
-    <section class="xplainer">
-      <a href="#" class="xplainer">
-        <div class="xplainer-image">
-          <img
-            src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/Innovation/vision-boost/vb-00-teaser-square.jpg.asset.1561449292402.jpg"
-            alt=""
-          />
-        </div>
+    <section class="xplainer-container">
+      <a href="#" class="xplainer vision-vehicle">
+        <img
+          class="xplainer-image"
+          src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/Innovation/vision-boost/vb-01-stage-hd.jpg.asset.1561372567259.jpg"
+          alt=""
+        />
         <div class="xplainer-text">
           <h3 class="subline_light">Vision Vehicle</h3>
           <h2 class="headline_light">
@@ -271,14 +270,12 @@
           </h2>
         </div>
       </a>
-      <a class="xplainer" href="#">
-        <div class="xplainer-video">
-          <video autoplay loop>
-            <source
-              src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/glamping-and-luxury-camping/glamping-00-teaser-hd.mp4"
-            />
-          </video>
-        </div>
+      <a class="xplainer glamping" href="#">
+        <video autoplay loop class="xplainer-video">
+          <source
+            src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/glamping-and-luxury-camping/glamping-00-teaser-hd.mp4"
+          />
+        </video>
         <div class="xplainer-text">
           <h3 class="subline_dark">Lifestyle</h3>
           <h2 class="headline_dark">
@@ -286,14 +283,12 @@
           </h2>
         </div>
       </a>
-      <a href="#" class="xplainer">
-        <div class="xplainer-video">
-          <video autoplay loop>
-            <source
-              src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/canyoning-beginners-guide/bmw-x1-canyoning-00-teaser-hd.mp4"
-            />
-          </video>
-        </div>
+      <a href="#" class="xplainer trending-sports">
+        <video autoplay loop class="xplainer-video">
+          <source
+            src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/canyoning-beginners-guide/bmw-x1-canyoning-00-teaser-hd.mp4"
+          />
+        </video>
         <div class="xplainer-text">
           <h3 class="subline_light">Trending sport</h3>
           <h2 class="headline_light">
@@ -301,14 +296,12 @@
           </h2>
         </div>
       </a>
-      <a href="#" class="xplainer">
-        <div class="xplainer-video">
-          <video autoplay loop>
-            <source
-              src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/bmw-explained-logo/exl-00-teaser-hd.mp4"
-            />
-          </video>
-        </div>
+      <a href="#" class="xplainer bmw-explained">
+        <video autoplay loop class="xplainer-video">
+          <source
+            src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/bmw-explained-logo/exl-00-teaser-hd.mp4"
+          />
+        </video>
         <div class="xplainer-text">
           <h3 class="subline_light">BMW explained</h3>
           <h2 class="headline_light">
@@ -316,14 +309,12 @@
           </h2>
         </div>
       </a>
-      <a href="#" class="xplainer">
-        <div class="xplainer-video">
-          <video autoplay loop>
-            <source
-              src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/innovation/explained/ee-00-teaser-hd.mp4"
-            />
-          </video>
-        </div>
+      <a href="#" class="xplainer guide">
+        <video autoplay loop class="xplainer-video">
+          <source
+            src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/innovation/explained/ee-00-teaser-hd.mp4"
+          />
+        </video>
         <div class="xplainer-text">
           <h3 class="subline_light">Guide</h3>
           <h2 class="headline_light">
@@ -331,13 +322,12 @@
           </h2>
         </div>
       </a>
-      <a href="#" class="xplainer">
-        <div class="xplainer-image">
-          <img
-            src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/Innovation/value-of-time/vot-00-teaser-hd.jpg.asset.1560242085200.jpg"
-            alt=""
-          />
-        </div>
+      <a href="#" class="xplainer time-is-money">
+        <img
+          class="xplainer-image"
+          src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/Innovation/value-of-time/vot-00-teaser-hd.jpg.asset.1560242085200.jpg"
+          alt=""
+        />
         <div class="xplainer-text">
           <h3 class="subline_light">Time is money</h3>
           <h2 class="headline_light">
@@ -345,13 +335,12 @@
           </h2>
         </div>
       </a>
-      <a href="#" class="xplainer">
-        <div class="xplainer-image">
-          <img
-            src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/automotive-life/Zetsche/rdz-00-teaser-hd1.jpg.asset.1560259401102.jpg"
-            alt=""
-          />
-        </div>
+      <a href="#" class="xplainer for-car-aficionados">
+        <img
+          class="xplainer-image"
+          src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/automotive-life/Zetsche/rdz-00-teaser-hd1.jpg.asset.1560259401102.jpg"
+          alt=""
+        />
         <div class="xplainer-text">
           <h3 class="subline_light">For car aficionados</h3>
           <h2 class="headline_light">
@@ -359,14 +348,12 @@
           </h2>
         </div>
       </a>
-      <a href="#" class="xplainer">
-        <div class="xplainer-video">
-          <video autoplay loop>
-            <source
-              src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/innovation/copilot-2/copilot-00-teaser-hd.mp4"
-            />
-          </video>
-        </div>
+      <a href="#" class="xplainer self-driving-cars">
+        <video autoplay loop class="xplainer-video">
+          <source
+            src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/innovation/copilot-2/copilot-00-teaser-hd.mp4"
+          />
+        </video>
         <div class="xplainer-text">
           <h3 class="subline_light">Self-driving cars</h3>
           <h2 class="headline_light">
@@ -374,13 +361,12 @@
           </h2>
         </div>
       </a>
-      <a href="#" class="xplainer">
-        <div class="xplainer-image">
-          <img
-            src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/Innovation/yournow/yn-00-teaser-hd1.jpg.asset.1556007571509.jpg"
-            alt=""
-          />
-        </div>
+      <a href="#" class="xplainer guide-to-terms">
+        <img
+          class="xplainer-image"
+          src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/Innovation/yournow/yn-00-teaser-hd1.jpg.asset.1556007571509.jpg"
+          alt=""
+        />
         <div class="xplainer-text">
           <h3 class="subline_light">Guide to terms</h3>
           <h2 class="headline_light">
@@ -388,13 +374,12 @@
           </h2>
         </div>
       </a>
-      <a href="#" class="xplainer">
-        <div class="xplainer-image">
-          <img
-            src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/Design/my_favorite_space/mfs-00-teaser-hd.jpg.asset.1537430075672.jpg"
-            alt=""
-          />
-        </div>
+      <a href="#" class="xplainer design">
+        <img
+          class="xplainer-image"
+          src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/Design/my_favorite_space/mfs-00-teaser-hd.jpg.asset.1537430075672.jpg"
+          alt=""
+        />
         <div class="xplainer-text">
           <h3 class="subline_light">Design</h3>
           <h2 class="headline_light">
@@ -402,13 +387,12 @@
           </h2>
         </div>
       </a>
-      <a href="#" class="xplainer">
-        <div class="xplainer-image">
-          <img
-            src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/automotive-life/isetta-history/is-00-teaser-hd.jpg.asset.1559637615084.jpg"
-            alt=""
-          />
-        </div>
+      <a href="#" class="xplainer classic-car">
+        <img
+          class="xplainer-image"
+          src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/automotive-life/isetta-history/is-00-teaser-hd.jpg.asset.1559637615084.jpg"
+          alt=""
+        />
         <div class="xplainer-text">
           <h3 class="subline_light">Classic car</h3>
           <h2 class="headline_light">
@@ -416,14 +400,12 @@
           </h2>
         </div>
       </a>
-      <a href="#" class="xplainer">
-        <div class="xplainer-video">
-          <video autoplay loop>
-            <source
-              src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/f40/f40-00-teaser-hd.mp4"
-            />
-          </video>
-        </div>
+      <a href="#" class="xplainer playlists">
+        <video autoplay loop class="xplainer-video">
+          <source
+            src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/f40/f40-00-teaser-hd.mp4"
+          />
+        </video>
         <div class="xplainer-text">
           <h3 class="subline_light">Playlists</h3>
           <h2 class="headline_light">
