--- a/index.html
+++ b/index.html
@@ -413,8 +413,8 @@
           </h2>
         </div>
       </a>
-      <a href="#">
-        <p class="btn btn_dark_wide">Show more</p>
+      <a href="#" class="btn btn_dark_wide">
+        <p>Show more</p>
       </a>
     </section>
     <section class="social">
