--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
       </div>
     </section>
     <section class="find-bmw">
-      <div class="find-bmw_text">
+      <div class="headline_text">
         <p>BMW in your country</p>
         <h2>ALL BMW MODELS</h2>
         <a href="#">Find your BMW</a>
@@ -418,8 +418,10 @@
       </a>
     </section>
     <section class="social">
-      <h2>BMW ON THE SOCIAL WEB</h2>
-      <P>Become part of the BMW community</P>
+      <div class="headline_text">
+        <h2>BMW ON THE SOCIAL WEB</h2>
+        <p>Become part of the BMW community</p>
+      </div>
     </section>
     <footer></footer>
   </body>
