--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <header class="intro">
       <a href="#">
         <div class="intro-video">
-          <video autoplay loop>
+          <video autoplay loop muted>
             <source
               src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/survival-guide/sg-00-teaser-hd-1.mp4"
             />
@@ -63,7 +63,7 @@
     </header>
     <article class="suggestions-container">
       <a href="#" class="container_left">
-        <div class="suggestions-image_left">
+        <div class="suggestions-image">
           <img
             alt="#"
             src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/automotive-life/grand-tour/gt-00-teaser-square.jpg.asset.1563871287723.jpg"
@@ -78,7 +78,7 @@
         </div>
       </a>
       <a href="#" class="container_right">
-        <div class="suggestions-image_right">
+        <div class="suggestions-image light">
           <img
             alt="#"
             src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/automotive-life/e-mobility/em-00-teaser-square.jpg.asset.1562239258598.jpg"
@@ -258,11 +258,12 @@
     </section>
     <section class="xplainer-container">
       <a href="#" class="xplainer vision-vehicle">
-        <img
-          class="xplainer-image"
-          src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/Innovation/vision-boost/vb-01-stage-hd.jpg.asset.1561372567259.jpg"
-          alt=""
-        />
+        <div class="xplainer-image">
+          <img
+            src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/Innovation/vision-boost/vb-01-stage-hd.jpg.asset.1561372567259.jpg"
+            alt=""
+          />
+        </div>
         <div class="xplainer-text">
           <h3 class="subline_light">Vision Vehicle</h3>
           <h2 class="headline_light">
@@ -271,11 +272,13 @@
         </div>
       </a>
       <a class="xplainer glamping" href="#">
-        <video autoplay loop class="xplainer-video">
-          <source
-            src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/glamping-and-luxury-camping/glamping-00-teaser-hd.mp4"
-          />
-        </video>
+        <div class="xplainer-video lightbg">
+          <video autoplay loop muted>
+            <source
+              src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/glamping-and-luxury-camping/glamping-00-teaser-hd.mp4"
+            />
+          </video>
+        </div>
         <div class="xplainer-text">
           <h3 class="subline_dark">Lifestyle</h3>
           <h2 class="headline_dark">
@@ -284,11 +287,13 @@
         </div>
       </a>
       <a href="#" class="xplainer trending-sports">
-        <video autoplay loop class="xplainer-video">
-          <source
-            src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/canyoning-beginners-guide/bmw-x1-canyoning-00-teaser-hd.mp4"
-          />
-        </video>
+        <div class="xplainer-video">
+          <video autoplay loop muted>
+            <source
+              src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/canyoning-beginners-guide/bmw-x1-canyoning-00-teaser-hd.mp4"
+            />
+          </video>
+        </div>
         <div class="xplainer-text">
           <h3 class="subline_light">Trending sport</h3>
           <h2 class="headline_light">
@@ -297,11 +302,13 @@
         </div>
       </a>
       <a href="#" class="xplainer bmw-explained">
-        <video autoplay loop class="xplainer-video">
-          <source
-            src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/bmw-explained-logo/exl-00-teaser-hd.mp4"
-          />
-        </video>
+        <div class="xplainer-video">
+          <video autoplay loop muted>
+            <source
+              src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/bmw-explained-logo/exl-00-teaser-hd.mp4"
+            />
+          </video>
+        </div>
         <div class="xplainer-text">
           <h3 class="subline_light">BMW explained</h3>
           <h2 class="headline_light">
@@ -310,11 +317,13 @@
         </div>
       </a>
       <a href="#" class="xplainer guide">
-        <video autoplay loop class="xplainer-video">
-          <source
-            src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/innovation/explained/ee-00-teaser-hd.mp4"
-          />
-        </video>
+        <div class="xplainer-video">
+          <video autoplay loop muted>
+            <source
+              src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/innovation/explained/ee-00-teaser-hd.mp4"
+            />
+          </video>
+        </div>
         <div class="xplainer-text">
           <h3 class="subline_light">Guide</h3>
           <h2 class="headline_light">
@@ -323,11 +332,12 @@
         </div>
       </a>
       <a href="#" class="xplainer time-is-money">
-        <img
-          class="xplainer-image"
-          src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/Innovation/value-of-time/vot-00-teaser-hd.jpg.asset.1560242085200.jpg"
-          alt=""
-        />
+        <div class="xplainer-image">
+          <img
+            src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/Innovation/value-of-time/vot-00-teaser-hd.jpg.asset.1560242085200.jpg"
+            alt=""
+          />
+        </div>
         <div class="xplainer-text">
           <h3 class="subline_light">Time is money</h3>
           <h2 class="headline_light">
@@ -336,11 +346,12 @@
         </div>
       </a>
       <a href="#" class="xplainer for-car-aficionados">
-        <img
-          class="xplainer-image"
-          src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/automotive-life/Zetsche/rdz-00-teaser-hd1.jpg.asset.1560259401102.jpg"
-          alt=""
-        />
+        <div class="xplainer-image">
+          <img
+            src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/automotive-life/Zetsche/rdz-00-teaser-hd1.jpg.asset.1560259401102.jpg"
+            alt=""
+          />
+        </div>
         <div class="xplainer-text">
           <h3 class="subline_light">For car aficionados</h3>
           <h2 class="headline_light">
@@ -349,11 +360,13 @@
         </div>
       </a>
       <a href="#" class="xplainer self-driving-cars">
-        <video autoplay loop class="xplainer-video">
-          <source
-            src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/innovation/copilot-2/copilot-00-teaser-hd.mp4"
-          />
-        </video>
+        <div class="xplainer-video">
+          <video autoplay loop muted>
+            <source
+              src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/innovation/copilot-2/copilot-00-teaser-hd.mp4"
+            />
+          </video>
+        </div>
         <div class="xplainer-text">
           <h3 class="subline_light">Self-driving cars</h3>
           <h2 class="headline_light">
@@ -362,11 +375,12 @@
         </div>
       </a>
       <a href="#" class="xplainer guide-to-terms">
-        <img
-          class="xplainer-image"
-          src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/Innovation/yournow/yn-00-teaser-hd1.jpg.asset.1556007571509.jpg"
-          alt=""
-        />
+        <div class="xplainer-image">
+          <img
+            src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/Innovation/yournow/yn-00-teaser-hd1.jpg.asset.1556007571509.jpg"
+            alt=""
+          />
+        </div>
         <div class="xplainer-text">
           <h3 class="subline_light">Guide to terms</h3>
           <h2 class="headline_light">
@@ -375,11 +389,12 @@
         </div>
       </a>
       <a href="#" class="xplainer design">
-        <img
-          class="xplainer-image"
-          src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/Design/my_favorite_space/mfs-00-teaser-hd.jpg.asset.1537430075672.jpg"
-          alt=""
-        />
+        <div class="xplainer-image">
+          <img
+            src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/Design/my_favorite_space/mfs-00-teaser-hd.jpg.asset.1537430075672.jpg"
+            alt=""
+          />
+        </div>
         <div class="xplainer-text">
           <h3 class="subline_light">Design</h3>
           <h2 class="headline_light">
@@ -388,11 +403,12 @@
         </div>
       </a>
       <a href="#" class="xplainer classic-car">
-        <img
-          class="xplainer-image"
-          src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/automotive-life/isetta-history/is-00-teaser-hd.jpg.asset.1559637615084.jpg"
-          alt=""
-        />
+        <div class="xplainer-image">
+          <img
+            src="https://www.bmw.com/content/dam/bmw/marketBMWCOM/bmw_com/categories/automotive-life/isetta-history/is-00-teaser-hd.jpg.asset.1559637615084.jpg"
+            alt=""
+          />
+        </div>
         <div class="xplainer-text">
           <h3 class="subline_light">Classic car</h3>
           <h2 class="headline_light">
@@ -401,11 +417,13 @@
         </div>
       </a>
       <a href="#" class="xplainer playlists">
-        <video autoplay loop class="xplainer-video">
-          <source
-            src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/f40/f40-00-teaser-hd.mp4"
-          />
-        </video>
+        <div class="xplainer-video">
+          <video autoplay loop muted>
+            <source
+              src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/f40/f40-00-teaser-hd.mp4"
+            />
+          </video>
+        </div>
         <div class="xplainer-text">
           <h3 class="subline_light">Playlists</h3>
           <h2 class="headline_light">
