--- a/index.html
+++ b/index.html
@@ -440,6 +440,26 @@
         <h2>BMW ON THE SOCIAL WEB</h2>
         <p>Become part of the BMW community</p>
       </div>
+      <div class="instagram-screen">
+        <header class="insta_header">
+          <div class="insta_bmwlogo"></div>
+          <a href="#">bmw</a>
+          <p>22.1m followers</p>
+          <p class="insta-btn">View Profile</p>
+        </header>
+        <section class="insta_image">
+          <img src="" alt="#" />
+          <p>View More on Instagram</p>
+        </section>
+        <section class="insta-likes">
+          <div class="insta-likes_symbols"></div>
+          <p>176,961 likes</p>
+        </section>
+        <section class="insta_comments">
+          <p>Add a comment</p>
+          <div class="insta-logo"></div>
+        </section>
+      </div>
     </section>
     <footer></footer>
   </body>
