--- a/index.html
+++ b/index.html
@@ -440,27 +440,57 @@
         <h2>BMW ON THE SOCIAL WEB</h2>
         <p>Become part of the BMW community</p>
       </div>
-      <div class="instagram-screen">
+    </section>
+    <div class="instagram">
+      <div class="instagram_screen">
         <header class="insta_header">
-          <div class="insta_bmwlogo"></div>
-          <a href="#">bmw</a>
-          <p>22.1m followers</p>
-          <p class="insta-btn">View Profile</p>
+          <div class="insta_name-logo">
+            <a href="#" class="insta_bmwlogo">
+              <img
+                src="https://scontent-amt2-1.cdninstagram.com/vp/c9a9fcdd29e8312cd8c3cfc3df95e019/5DCABD97/t51.2885-19/s150x150/15034904_218202905282112_2913468770066366464_a.jpg?_nc_ht=scontent-amt2-1.cdninstagram.com"
+                alt="bmw"
+              />
+            </a>
+            <a href="#"
+              ><p class="insta_name">
+                bmw
+                <span
+                  class="Sprite VerifiedSprite embedSpriteVerifiedBadgeSmall"
+                >
+                  Verified
+                </span>
+              </p>
+              <p class="insta_followers">22.1m followers</p>
+            </a>
+          </div>
+          <p class="insta_btn">View Profile</p>
         </header>
         <section class="insta_image">
-          <img src="" alt="#" />
+          <img
+            src="https://scontent-amt2-1.cdninstagram.com/vp/899510f2f5abe598e51df2eb85bd971d/5DEAFD1A/t51.2885-15/fr/e15/p1080x1080/66387064_147610933085358_4126785513061250805_n.jpg?_nc_ht=scontent-amt2-1.cdninstagram.com"
+            alt="#"
+          />
           <p>View More on Instagram</p>
         </section>
         <section class="insta-likes">
-          <div class="insta-likes_symbols"></div>
+          <div class="insta-likes_symbols">
+            <div class="insta-likes_symbols left">
+              <a href="#" class="LikeSprite embedSpriteHeartOpen"></a>
+              <a href="#" class="LikeSpriteHover embedSpriteHeartOpenRed"></a>
+              <a href="#" class="embedSpriteComment"></a>
+              <a href="#" class="embedSpriteShare"></a>
+            </div>
+            <a href="#" class="embedSpriteSaveOpen"></a>
+          </div>
           <p>176,961 likes</p>
         </section>
-        <section class="insta_comments">
+        <footer class="insta_comments">
           <p>Add a comment</p>
-          <div class="insta-logo"></div>
-        </section>
+          <a class="insta-logo"></a>
+        </footer>
       </div>
-    </section>
+    </div>
+
     <footer></footer>
   </body>
 </html>
